--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
